updated the handout to include rachel's doc

--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@ Sable Cantus &amp; Zulma Calderon
   </p>
   <p class="date">2013 Rio Hondo Website Refresh</p>
 </div>
-<div class="section slide level1" id="please-sign-in">
-<h1>Please Sign In</h1>
-<p>Please sign in at <a href="http://www.riohondo.edu/its/signin">riohondo.edu/its/signin</a></p>
-<p>Use your browser or one in the back</p>
-</div>
 <div class="section slide level1" id="creating-content-for-the-web">
 <h1>Creating Content for the Web</h1>
 <p>Thank you for being here today!</p>
@@ -72,7 +67,7 @@ Sable Cantus &amp; Zulma Calderon
 <div class="section slide level1" id="start-with-an-outline">
 <h1>Start With An Outline</h1>
 <blockquote>
-<p>Let’s use the IT website as a simple example. This site completely focuses on content.</p>
+<p>Let's use the IT website as a simple example. This site completely focuses on content.</p>
 </blockquote>
 <p><strong>ITS Homepage</strong></p>
 <ul>
@@ -161,7 +156,7 @@ Sable Cantus &amp; Zulma Calderon
 <p>Instead of tackling the entire article at once, try writing one paragraph at a time.</p>
 </div>
 <div class="section slide level1" id="test-your-contents-readability">
-<h1>Test Your Content’s Readability</h1>
+<h1>Test Your Content's Readability</h1>
 <p>After you have been writing your content in notepad. You may paste it into Microsoft Word and use the Readability Statistics feature.</p>
 <p>This is not required, but may be used to help you analyze your content.</p>
 <img src="images/readability.png" width=650px>
@@ -179,7 +174,7 @@ Sable Cantus &amp; Zulma Calderon
 <div class="section slide level1" id="review-review-review-refresh">
 <h1>Review, Review, Review, Refresh</h1>
 <p>Review your content before you publish.</p>
-<p>Get someone else to read your content and check if it “makes sense” to them.</p>
+<p>Get someone else to read your content and check if it &quot;makes sense&quot; to them.</p>
 <p>Make yourself a reminder to go through your site and make sure the content is current.</p>
 <img src="images/reminder.gif" width=250px>
 </div>
@@ -207,6 +202,7 @@ Sable Cantus &amp; Zulma Calderon
 <li><a href="http://www.4syllables.com.au/resources/web-writing-tips/readable-writing/">Writing in a Readable Style</a> (<em>your handout</em>)</li>
 <li><a href="http://blogcritics.org/how-to-write-great-website-content/">How to Write Great Website Content</a></li>
 <li><a href="http://office.microsoft.com/en-us/word-help/test-your-document-s-readability-HP010148506.aspx#BM1">Test Your Documents Readability in Word</a></li>
+<li><a href="http://theoatmeal.com/comics/apostrophe">The Oatmeal: When to Use an Apostrophe</a></li>
 </ul>
 <meta name="duration" content="45" />
 </div>
