forgot to add the updated pages from last commit

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@ Sable Cantus &amp; Zulma Calderon
   </p>
   <p class="date">2013 Rio Hondo Website Refresh</p>
 </div>
-<div class="section slide level1" id="creating-content-for-the-web">
+<div id="creating-content-for-the-web" class="slide section level1">
 <h1>Creating Content for the Web</h1>
 <p>Thank you for being here today!</p>
 <p>Your work is <strong>very important!</strong></p>
 <p>You are the experts in your area. You know what is going on. You know what your audience is looking for when they visit your website.</p>
 <div class="figure">
-<img src="images/checkmark.jpg" /><p class="caption"></p>
+<img src="images/checkmark.jpg" />
 </div>
 <p>This presentation is available at <a href="http://www.riohondo.edu/its/content_creation">riohondo.edu/its/content_creation</a></p>
 </div>
-<div class="section slide level1" id="what-to-expect-today">
+<div id="what-to-expect-today" class="slide section level1">
 <h1>What to Expect Today</h1>
 <p>We are going to talk about creating good content for your campus website. Writing good content is not the same as good design or good formatting.</p>
 <p>Today we will:</p>
@@ -42,29 +42,27 @@ Sable Cantus &amp; Zulma Calderon
 <li>Take some time to work</li>
 </ul>
 </div>
-<div class="section slide level1" id="current-state-of-affairs">
+<div id="current-state-of-affairs" class="slide section level1">
 <h1>Current State of Affairs</h1>
 <p>Navigate to your area of the website.</p>
-<img src="images/riohondo.png" height=600px>
+<p><img src="images/riohondo.png" height=600px></p>
 </div>
-<div class="section slide level1" id="a-plain-text-editor">
+<div id="a-plain-text-editor" class="slide section level1">
 <h1>A Plain Text Editor</h1>
 <ul>
 <li>Notepad</li>
 <li>TextEdit</li>
 <li><a href="http://draftin.com">Draftin.com</a></li>
 </ul>
-<div class="figure">
-<img src="http://1.bp.blogspot.com/-1JNerCiQ2x0/TfdrvnzFxYI/AAAAAAAAASA/6-gUESeQqq4/s400/notepad-screen.gif" /><p class="caption"></p>
-</div>
+<p><img src="images/notepad.png"></p>
 <p><strong>Turn on Word Wrap</strong></p>
 <p><em>Why use something so simple when we have word?</em></p>
 </div>
-<div class="section slide level1" id="focus">
+<div id="focus" class="slide section level1">
 <h1>Focus</h1>
-<img src="images/simple-focus.jpg" width=800px>
+<p><img src="images/simple-focus.jpg" width=800px></p>
 </div>
-<div class="section slide level1" id="start-with-an-outline">
+<div id="start-with-an-outline" class="slide section level1">
 <h1>Start With An Outline</h1>
 <blockquote>
 <p>Let's use the IT website as a simple example. This site completely focuses on content.</p>
@@ -87,12 +85,12 @@ Sable Cantus &amp; Zulma Calderon
 <li>Headers for specific information (for scanning) and short descriptive paragraphs</li>
 </ul>
 </div>
-<div class="section slide level1" id="its-screenshot">
+<div id="its-screenshot" class="slide section level1">
 <h1>ITS Screenshot</h1>
-<img src="images/its.png">
+<p><img src="images/its.png"></p>
 <p><a href="http://www.riohondo.edu/its">ITS Website</a></p>
 </div>
-<div class="section slide level1" id="who-are-you-writing-for">
+<div id="who-are-you-writing-for" class="slide section level1">
 <h1>Who Are You Writing For?</h1>
 <blockquote>
 <p>The IT website is focused on college faculty and staff.</p>
@@ -107,7 +105,7 @@ Sable Cantus &amp; Zulma Calderon
 <li>???</li>
 </ul>
 </div>
-<div class="section slide level1" id="respect-your-audience">
+<div id="respect-your-audience" class="slide section level1">
 <h1>Respect Your Audience</h1>
 <p>The campus website should be your communication tool. People will come to your site looking for <em>something</em>. Make that <em>something</em> front and center.</p>
 <p><strong>Why do people visit your website?</strong></p>
@@ -119,12 +117,12 @@ Sable Cantus &amp; Zulma Calderon
 <li>???</li>
 </ul>
 </div>
-<div class="section slide level1" id="does-your-website-look-like-lings">
+<div id="does-your-website-look-like-lings" class="slide section level1">
 <h1>Does Your Website Look Like Lings?</h1>
-<img src="images/lingscars.png">
+<p><img src="images/lingscars.png"></p>
 <p><a href="http://www.riohondo.edu/its/content_creation">Ling missed his training day</a></p>
 </div>
-<div class="section slide level1" id="some-tips-to-work-with">
+<div id="some-tips-to-work-with" class="slide section level1">
 <h1>Some Tips to Work With</h1>
 <ul>
 <li>Write like a journalist by putting the important information up front with links to further details</li>
@@ -134,7 +132,7 @@ Sable Cantus &amp; Zulma Calderon
 <li>Only underline hyperlinks and use <strong>bold</strong> or <em>italics</em> sparingly instead for emphasis</li>
 </ul>
 </div>
-<div class="section slide level1" id="help-readers-scan">
+<div id="help-readers-scan" class="slide section level1">
 <h1>Help Readers Scan</h1>
 <blockquote>
 <p><em>from <a href="http://www.usability.gov/methods/design_site/writing4web.html">Usability.gov</a></em></p>
@@ -149,36 +147,48 @@ Sable Cantus &amp; Zulma Calderon
 <li>Use white space to visually separate information</li>
 </ul>
 </div>
-<div class="section slide level1" id="structure-your-text">
+<div id="structure-your-text" class="slide section level1">
 <h1>Structure Your Text</h1>
-<p>Make use of <strong>bold headings</strong>, short paragraphs, bullet lists and tables if the information requires it.</p>
-<p>To better organize your thoughts, divide your article into sub-headings. Sub-headings make things easier to digest.</p>
-<p>Instead of tackling the entire article at once, try writing one paragraph at a time.</p>
+<ul>
+<li><p>Make use of <strong>bold headings</strong>, short paragraphs, bullet lists and tables if the information requires it.</p></li>
+<li><p>To better organize your thoughts, divide your article into sub-headings. Sub-headings make things easier to digest.</p></li>
+<li><p>Instead of tackling the entire article at once, try writing one paragraph at a time.</p></li>
+</ul>
 </div>
-<div class="section slide level1" id="test-your-contents-readability">
+<div id="test-your-contents-readability" class="slide section level1">
 <h1>Test Your Content's Readability</h1>
 <p>After you have been writing your content in notepad. You may paste it into Microsoft Word and use the Readability Statistics feature.</p>
 <p>This is not required, but may be used to help you analyze your content.</p>
-<img src="images/readability.png" width=650px>
+<p><img src="images/readability.png" width=650px></p>
 </div>
-<div class="section slide level1" id="enable-readability-statistics-in-word">
+<div id="whats-the-score" class="slide section level1">
+<h1>What's the Score?</h1>
+<p>The <a href="https://en.wikipedia.org/wiki/Flesch-Kincaid_Readability_Test">Flesch Reading Ease</a> score can be used to identify the age at which an audience will be able to understand your writing.</p>
+<pre><code>Score       Notes
+90.0–100.0  easily understood by an average 11-year-old student
+60.0–70.0   easily understood by 13- to 15-year-old students
+0.0–30.0    best understood by university graduates</code></pre>
+<p>How do they calculate this?</p>
+<p><img src="images/fk.png"></p>
+</div>
+<div id="enable-readability-statistics-in-word" class="slide section level1">
 <h1>Enable Readability Statistics in Word</h1>
 <p>File » Options » Proofing » Enable Readability Statistics</p>
-<img src="images/options.jpg" width=650px>
+<p><img src="images/options.jpg" width=650px></p>
 </div>
-<div class="section slide level1" id="use-the-spelling-grammar-tool">
+<div id="use-the-spelling-grammar-tool" class="slide section level1">
 <h1>Use the Spelling &amp; Grammar Tool</h1>
 <p>Review » Spelling &amp; Grammar</p>
-<img src="images/spelling.jpg" width=650px>
+<p><img src="images/spelling.jpg" width=650px></p>
 </div>
-<div class="section slide level1" id="review-review-review-refresh">
+<div id="review-review-review-refresh" class="slide section level1">
 <h1>Review, Review, Review, Refresh</h1>
 <p>Review your content before you publish.</p>
 <p>Get someone else to read your content and check if it &quot;makes sense&quot; to them.</p>
 <p>Make yourself a reminder to go through your site and make sure the content is current.</p>
-<img src="images/reminder.gif" width=250px>
+<p><img src="images/reminder.gif" width=250px></p>
 </div>
-<div class="section slide level1" id="some-tips-to-collaborate">
+<div id="some-tips-to-collaborate" class="slide section level1">
 <h1>Some Tips to Collaborate</h1>
 <p>You can work with your team using online tools to collaborate efficiently without emailing text files back and forth using tools such as:</p>
 <ul>
@@ -188,13 +198,13 @@ Sable Cantus &amp; Zulma Calderon
 <li><a href="http://www.firepad.io/">Firepad.io</a></li>
 </ul>
 </div>
-<div class="section slide level1" id="questions">
+<div id="questions" class="slide section level1">
 <h1>Questions?</h1>
 </div>
-<div class="section slide level1" id="thank-you">
+<div id="thank-you" class="slide section level1">
 <h1>Thank You</h1>
 </div>
-<div class="section slide level1" id="resources">
+<div id="resources" class="slide section level1">
 <h1>Resources</h1>
 <ul>
 <li><a href="assets/handouts.pdf">Workshop Handouts (pdf download)</a></li>
@@ -204,7 +214,7 @@ Sable Cantus &amp; Zulma Calderon
 <li><a href="http://office.microsoft.com/en-us/word-help/test-your-document-s-readability-HP010148506.aspx#BM1">Test Your Documents Readability in Word</a></li>
 <li><a href="http://theoatmeal.com/comics/apostrophe">The Oatmeal: When to Use an Apostrophe</a></li>
 </ul>
-<meta name="duration" content="45" />
+<p><meta name="duration" content="45" /></p>
 </div>
 </body>
 </html>
