--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@ Sable Cantus &amp; Zulma Calderon
 <div class="figure">
 <img src="images/checkmark.jpg" />
 </div>
-<p>This presentation is available at <a href="http://www.riohondo.edu/its/content_creation">riohondo.edu/its/content_creation</a></p>
 </div>
 <div id="what-to-expect-today" class="slide section level1">
 <h1>What to Expect Today</h1>
-<p>We are going to talk about creating good content for your campus website. Writing good content is not the same as good design or good formatting.</p>
-<p>Today we will:</p>
 <ul>
 <li>Talk about good content</li>
 <li>Talk about identifying our target audience</li>
@@ -42,10 +39,9 @@ Sable Cantus &amp; Zulma Calderon
 <li>Take some time to work</li>
 </ul>
 </div>
-<div id="current-state-of-affairs" class="slide section level1">
-<h1>Current State of Affairs</h1>
-<p>Navigate to your area of the website.</p>
-<p><img src="images/riohondo.png" height=600px></p>
+<div id="find-your-area" class="slide section level1">
+<h1>Find Your Area</h1>
+<p><img src="images/riohondo.png"></p>
 </div>
 <div id="a-plain-text-editor" class="slide section level1">
 <h1>A Plain Text Editor</h1>
@@ -55,7 +51,6 @@ Sable Cantus &amp; Zulma Calderon
 <li><a href="http://draftin.com">Draftin.com</a></li>
 </ul>
 <p><img src="images/notepad.png"></p>
-<p><strong>Turn on Word Wrap</strong></p>
 <p><em>Why use something so simple when we have word?</em></p>
 </div>
 <div id="focus" class="slide section level1">
@@ -64,9 +59,6 @@ Sable Cantus &amp; Zulma Calderon
 </div>
 <div id="start-with-an-outline" class="slide section level1">
 <h1>Start With An Outline</h1>
-<blockquote>
-<p>Let's use the IT website as a simple example. This site completely focuses on content.</p>
-</blockquote>
 <p><strong>ITS Homepage</strong></p>
 <ul>
 <li>Welcome and About ITS statement</li>
@@ -90,12 +82,8 @@ Sable Cantus &amp; Zulma Calderon
 <p><img src="images/its.png"></p>
 <p><a href="http://www.riohondo.edu/its">ITS Website</a></p>
 </div>
-<div id="who-are-you-writing-for" class="slide section level1">
-<h1>Who Are You Writing For?</h1>
-<blockquote>
-<p>The IT website is focused on college faculty and staff.</p>
-</blockquote>
-<p><strong>Who is your audience?</strong></p>
+<div id="who-is-your-audience" class="slide section level1">
+<h1>Who Is Your Audience?</h1>
 <ul>
 <li>students</li>
 <li>faculty</li>
@@ -105,10 +93,8 @@ Sable Cantus &amp; Zulma Calderon
 <li>???</li>
 </ul>
 </div>
-<div id="respect-your-audience" class="slide section level1">
-<h1>Respect Your Audience</h1>
-<p>The campus website should be your communication tool. People will come to your site looking for <em>something</em>. Make that <em>something</em> front and center.</p>
-<p><strong>Why do people visit your website?</strong></p>
+<div id="what-are-they-looking-for" class="slide section level1">
+<h1>What Are They Looking For?</h1>
 <ul>
 <li>Location</li>
 <li>Office Hours</li>
@@ -117,13 +103,13 @@ Sable Cantus &amp; Zulma Calderon
 <li>???</li>
 </ul>
 </div>
-<div id="does-your-website-look-like-lings" class="slide section level1">
-<h1>Does Your Website Look Like Lings?</h1>
+<div id="dont-look-like-ling" class="slide section level1">
+<h1>Don't Look Like Ling!</h1>
 <p><img src="images/lingscars.png"></p>
 <p><a href="http://www.riohondo.edu/its/content_creation">Ling missed his training day</a></p>
 </div>
-<div id="some-tips-to-work-with" class="slide section level1">
-<h1>Some Tips to Work With</h1>
+<div id="try-these..." class="slide section level1">
+<h1>Try These...</h1>
 <ul>
 <li>Write like a journalist by putting the important information up front with links to further details</li>
 <li>Write concisely and in plain english</li>
@@ -135,7 +121,9 @@ Sable Cantus &amp; Zulma Calderon
 <div id="help-readers-scan" class="slide section level1">
 <h1>Help Readers Scan</h1>
 <blockquote>
+<blockquote>
 <p><em>from <a href="http://www.usability.gov/methods/design_site/writing4web.html">Usability.gov</a></em></p>
+</blockquote>
 </blockquote>
 <ul>
 <li>Use headings and sub-headings</li>
@@ -157,8 +145,7 @@ Sable Cantus &amp; Zulma Calderon
 </div>
 <div id="test-your-contents-readability" class="slide section level1">
 <h1>Test Your Content's Readability</h1>
-<p>After you have been writing your content in notepad. You may paste it into Microsoft Word and use the Readability Statistics feature.</p>
-<p>This is not required, but may be used to help you analyze your content.</p>
+<p>Try pasting your content into Microsoft Word and use the Readability Statistics feature.</p>
 <p><img src="images/readability.png" width=650px></p>
 </div>
 <div id="whats-the-score" class="slide section level1">
@@ -183,9 +170,11 @@ Sable Cantus &amp; Zulma Calderon
 </div>
 <div id="review-review-review-refresh" class="slide section level1">
 <h1>Review, Review, Review, Refresh</h1>
-<p>Review your content before you publish.</p>
-<p>Get someone else to read your content and check if it &quot;makes sense&quot; to them.</p>
-<p>Make yourself a reminder to go through your site and make sure the content is current.</p>
+<ul>
+<li><p>Review your content before you publish</p></li>
+<li><p>Does your content &quot;make sense&quot; to someone else?</p></li>
+<li><p>Make yourself a reminder to go through your site and make sure the content is current</p></li>
+</ul>
 <p><img src="images/reminder.gif" width=250px></p>
 </div>
 <div id="some-tips-to-collaborate" class="slide section level1">
@@ -203,13 +192,14 @@ Sable Cantus &amp; Zulma Calderon
 </div>
 <div id="thank-you" class="slide section level1">
 <h1>Thank You</h1>
+<p>This presentation is available at <a href="http://www.riohondo.edu/its/content_creation">riohondo.edu/its/content_creation</a></p>
 </div>
 <div id="resources" class="slide section level1">
 <h1>Resources</h1>
 <ul>
 <li><a href="assets/handouts.pdf">Workshop Handouts (pdf download)</a></li>
 <li><a href="http://www.usability.gov/methods/design_site/writing4web.html">Usability.gov</a></li>
-<li><a href="http://www.4syllables.com.au/resources/web-writing-tips/readable-writing/">Writing in a Readable Style</a> (<em>your handout</em>)</li>
+<li><a href="http://www.4syllables.com.au/resources/web-writing-tips/readable-writing/">Writing in a Readable Style</a></li>
 <li><a href="http://blogcritics.org/how-to-write-great-website-content/">How to Write Great Website Content</a></li>
 <li><a href="http://office.microsoft.com/en-us/word-help/test-your-document-s-readability-HP010148506.aspx#BM1">Test Your Documents Readability in Word</a></li>
 <li><a href="http://theoatmeal.com/comics/apostrophe">The Oatmeal: When to Use an Apostrophe</a></li>
