switched to using reveal.js with pandoc

--- a/index.html
+++ b/index.html
@@ -1,36 +1,66 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
- "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta http-equiv="Content-Style-Type" content="text/css" />
-  <meta name="author" content="Sable Cantus &amp; Zulma Calderon" />
-  <title>Content Creation Guidelines</title>
-  <link rel="stylesheet" type="text/css" media="screen, projection, print"
-    href="assets/slidy.css" />
-  <script src="http://www.w3.org/Talks/Tools/Slidy2/scripts/slidy.js.gz"
-    charset="utf-8" type="text/javascript"></script>
+<meta charset="utf-8">
+ 
+<title>Content Creation</title>
+ 
+<meta name="description" content="Content Creation">
+ 
+<meta name="author" content="Sable Cantus &amp; Zulma Calderon" />
+ 
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+ 
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+ 
+<link rel="stylesheet" href="css/reveal.min.css">
+<link rel="stylesheet" href="css/theme/beige.css" id="theme">
+ 
+ 
+<!-- For syntax highlighting -->
+<link rel="stylesheet" href="lib/css/zenburn.css">
+ 
+ 
+<!-- If the query includes 'print-pdf', use the PDF print sheet -->
+<script>
+document.write( '<link rel="stylesheet" href="css/print/' +
+( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) +
+'.css" type="text/css" media="print">' );
+</script>
+ 
+<!--[if lt IE 9]>
+<script src="lib/js/html5shiv.js"></script>
+<![endif]-->
 </head>
+ 
 <body>
-<div class="slide titlepage">
-  <h1 class="title">Content Creation Guidelines</h1>
-  <p class="author">
-Sable Cantus &amp; Zulma Calderon
-  </p>
-  <p class="date">2013 Rio Hondo Website Refresh</p>
-</div>
-<div id="creating-content-for-the-web" class="slide section level1">
-<h1>Creating Content for the Web</h1>
+ 
+<div class="reveal">
+ 
+<!-- Any section element inside of this container is displayed as a slide -->
+<div class="slides">
+ 
+<section>
+<h1>Content Creation</h1>
+<h3>Sable Cantus &amp; Zulma Calderon</h3>
+<p>
+<h4>2013 Rio Hondo Website Refresh</h4>
+</p>
+</section>
+ 
+ 
+<section id="creating-content-for-the-web" class="level2">
+<h2>Creating Content for the Web</h2>
 <p>Thank you for being here today!</p>
 <p>Your work is <strong>very important!</strong></p>
-<p>You are the experts in your area. You know what is going on. You know what your audience is looking for when they visit your website.</p>
-<div class="figure">
+<figure>
 <img src="images/checkmark.jpg" />
-</div>
-</div>
-<div id="what-to-expect-today" class="slide section level1">
-<h1>What to Expect Today</h1>
+</figure>
+<p><em>Let's get started!</em></p>
+</section>
+<section id="what-to-expect-today" class="level2">
+<h2>What to Expect Today</h2>
 <ul>
 <li>Talk about good content</li>
 <li>Talk about identifying our target audience</li>
@@ -38,13 +68,13 @@ Sable Cantus &amp; Zulma Calderon
 <li>Look at our existing content</li>
 <li>Take some time to work</li>
 </ul>
-</div>
-<div id="find-your-area" class="slide section level1">
-<h1>Find Your Area</h1>
+</section>
+<section id="find-your-area" class="level2">
+<h2>Find Your Area</h2>
 <p><img src="images/riohondo.png"></p>
-</div>
-<div id="a-plain-text-editor" class="slide section level1">
-<h1>A Plain Text Editor</h1>
+</section>
+<section id="a-plain-text-editor" class="level2">
+<h2>A Plain Text Editor</h2>
 <ul>
 <li>Notepad</li>
 <li>TextEdit</li>
@@ -52,38 +82,35 @@ Sable Cantus &amp; Zulma Calderon
 </ul>
 <p><img src="images/notepad.png"></p>
 <p><em>Why use something so simple when we have word?</em></p>
-</div>
-<div id="focus" class="slide section level1">
-<h1>Focus</h1>
+</section>
+<section id="focus" class="level2">
+<h2>Focus</h2>
 <p><img src="images/simple-focus.jpg" width=800px></p>
-</div>
-<div id="start-with-an-outline" class="slide section level1">
-<h1>Start With An Outline</h1>
-<p><strong>ITS Homepage</strong></p>
-<ul>
-<li>Welcome and About ITS statement</li>
-</ul>
-<p><strong>Help Desk</strong></p>
-<ul>
-<li>Contact information at the top and how to access the help desk system</li>
-</ul>
-<p><strong>Audio / Visual</strong></p>
-<ul>
-<li>Contact Info</li>
-</ul>
-<p><strong>Training</strong></p>
-<ul>
-<li>Contact Info</li>
-<li>Headers for specific information (for scanning) and short descriptive paragraphs</li>
-</ul>
-</div>
-<div id="its-screenshot" class="slide section level1">
-<h1>ITS Screenshot</h1>
+</section>
+<section id="start-with-an-outline" class="level2">
+<h2>Start With An Outline</h2>
+<pre><code>Home
+  - Welcome and About ITS
+Help Desk
+  - Contact Info
+  - How to access the help desk
+    - How to Write a Good Help Desk Ticket
+Audio / Visual
+  - Contact Info
+  - Services Available
+Training
+  - Contact Info
+  - Scannable Info on areas of training
+  - Past workshop notes
+  - Help Articles on Sidebar</code></pre>
+</section>
+<section id="section" class="level2">
+<h2></h2>
 <p><img src="images/its.png"></p>
 <p><a href="http://www.riohondo.edu/its">ITS Website</a></p>
-</div>
-<div id="who-is-your-audience" class="slide section level1">
-<h1>Who Is Your Audience?</h1>
+</section>
+<section id="who-is-your-audience" class="level2">
+<h2>Who Is Your Audience?</h2>
 <ul>
 <li>students</li>
 <li>faculty</li>
@@ -92,9 +119,9 @@ Sable Cantus &amp; Zulma Calderon
 <li>adult learners</li>
 <li>???</li>
 </ul>
-</div>
-<div id="what-are-they-looking-for" class="slide section level1">
-<h1>What Are They Looking For?</h1>
+</section>
+<section id="what-are-they-looking-for" class="level2">
+<h2>What Are They Looking For?</h2>
 <ul>
 <li>Location</li>
 <li>Office Hours</li>
@@ -102,14 +129,14 @@ Sable Cantus &amp; Zulma Calderon
 <li>Download Documents</li>
 <li>???</li>
 </ul>
-</div>
-<div id="dont-look-like-ling" class="slide section level1">
-<h1>Don't Look Like Ling!</h1>
+</section>
+<section id="dont-look-like-ling" class="level2">
+<h2>Don't Look Like Ling!</h2>
 <p><img src="images/lingscars.png"></p>
-<p><a href="http://www.riohondo.edu/its/content_creation">Ling missed his training day</a></p>
-</div>
-<div id="try-these..." class="slide section level1">
-<h1>Try These...</h1>
+<p><em>Ling missed his training day</em></p>
+</section>
+<section id="try-these..." class="level2">
+<h2>Try These...</h2>
 <ul>
 <li>Write like a journalist by putting the important information up front with links to further details</li>
 <li>Write concisely and in plain english</li>
@@ -117,14 +144,9 @@ Sable Cantus &amp; Zulma Calderon
 <li>Review, review, review</li>
 <li>Only underline hyperlinks and use <strong>bold</strong> or <em>italics</em> sparingly instead for emphasis</li>
 </ul>
-</div>
-<div id="help-readers-scan" class="slide section level1">
-<h1>Help Readers Scan</h1>
-<blockquote>
-<blockquote>
-<p><em>from <a href="http://www.usability.gov/methods/design_site/writing4web.html">Usability.gov</a></em></p>
-</blockquote>
-</blockquote>
+</section>
+<section id="help-readers-scan" class="level2">
+<h2>Help Readers Scan</h2>
 <ul>
 <li>Use headings and sub-headings</li>
 <li>Write short sentences</li>
@@ -134,22 +156,25 @@ Sable Cantus &amp; Zulma Calderon
 <li>Add a table of contents at the top of the page and hyperlink the categories to the related content on the page</li>
 <li>Use white space to visually separate information</li>
 </ul>
-</div>
-<div id="structure-your-text" class="slide section level1">
-<h1>Structure Your Text</h1>
+<blockquote>
+<p><em>from <a href="http://www.usability.gov/methods/design_site/writing4web.html">Usability.gov</a></em></p>
+</blockquote>
+</section>
+<section id="structure-your-text" class="level2">
+<h2>Structure Your Text</h2>
 <ul>
-<li><p>Make use of <strong>bold headings</strong>, short paragraphs, bullet lists and tables if the information requires it.</p></li>
-<li><p>To better organize your thoughts, divide your article into sub-headings. Sub-headings make things easier to digest.</p></li>
-<li><p>Instead of tackling the entire article at once, try writing one paragraph at a time.</p></li>
+<li>Make use of <strong>bold headings</strong>, short paragraphs, bullet lists and tables if the information requires it.</li>
+<li>To better organize your thoughts, divide your article into sub-headings. Sub-headings make things easier to digest.</li>
+<li>Instead of tackling the entire article at once, try writing one paragraph at a time.</li>
 </ul>
-</div>
-<div id="test-your-contents-readability" class="slide section level1">
-<h1>Test Your Content's Readability</h1>
+</section>
+<section id="test-your-contents-readability" class="level2">
+<h2>Test Your Content's Readability</h2>
+<p><img src="images/readability.png"></p>
 <p>Try pasting your content into Microsoft Word and use the Readability Statistics feature.</p>
-<p><img src="images/readability.png" width=650px></p>
-</div>
-<div id="whats-the-score" class="slide section level1">
-<h1>What's the Score?</h1>
+</section>
+<section id="whats-the-score" class="level2">
+<h2>What's the Score?</h2>
 <p>The <a href="https://en.wikipedia.org/wiki/Flesch-Kincaid_Readability_Test">Flesch Reading Ease</a> score can be used to identify the age at which an audience will be able to understand your writing.</p>
 <pre><code>Score       Notes
 90.0–100.0  easily understood by an average 11-year-old student
@@ -157,45 +182,45 @@ Sable Cantus &amp; Zulma Calderon
 0.0–30.0    best understood by university graduates</code></pre>
 <p>How do they calculate this?</p>
 <p><img src="images/fk.png"></p>
-</div>
-<div id="enable-readability-statistics-in-word" class="slide section level1">
-<h1>Enable Readability Statistics in Word</h1>
+</section>
+<section id="enable-readability-statistics-in-word" class="level2">
+<h2>Enable Readability Statistics in Word</h2>
 <p>File » Options » Proofing » Enable Readability Statistics</p>
 <p><img src="images/options.jpg" width=650px></p>
-</div>
-<div id="use-the-spelling-grammar-tool" class="slide section level1">
-<h1>Use the Spelling &amp; Grammar Tool</h1>
+<section id="use-the-spelling-grammar-tool" class="level3">
+<h3>Use the Spelling &amp; Grammar Tool</h3>
 <p>Review » Spelling &amp; Grammar</p>
 <p><img src="images/spelling.jpg" width=650px></p>
-</div>
-<div id="review-review-review-refresh" class="slide section level1">
-<h1>Review, Review, Review, Refresh</h1>
+</section>
+</section>
+<section id="review-review-review-refresh" class="level2">
+<h2>Review, Review, Review, Refresh</h2>
 <ul>
-<li><p>Review your content before you publish</p></li>
-<li><p>Does your content &quot;make sense&quot; to someone else?</p></li>
-<li><p>Make yourself a reminder to go through your site and make sure the content is current</p></li>
+<li>Review your content before you publish</li>
+<li>Does your content &quot;make sense&quot; to someone else?</li>
+<li>Make yourself a reminder to go through your site and make sure the content is current</li>
 </ul>
 <p><img src="images/reminder.gif" width=250px></p>
-</div>
-<div id="some-tips-to-collaborate" class="slide section level1">
-<h1>Some Tips to Collaborate</h1>
-<p>You can work with your team using online tools to collaborate efficiently without emailing text files back and forth using tools such as:</p>
+</section>
+<section id="some-tips-to-collaborate" class="level2">
+<h2>Some Tips to Collaborate</h2>
+<p>You can utilize online tools to collaborate efficiently.</p>
 <ul>
 <li><a href="http://drive.google.com/">Google Docs</a></li>
 <li><a href="http://draftin.com/">Draftin.com</a></li>
 <li><a href="http://fargo.io/">Fargo (for outlining)</a></li>
 <li><a href="http://www.firepad.io/">Firepad.io</a></li>
 </ul>
-</div>
-<div id="questions" class="slide section level1">
-<h1>Questions?</h1>
-</div>
-<div id="thank-you" class="slide section level1">
-<h1>Thank You</h1>
+</section>
+<section id="questions" class="level2">
+<h2>Questions?</h2>
+</section>
+<section id="thank-you" class="level2">
+<h2>Thank You</h2>
 <p>This presentation is available at <a href="http://www.riohondo.edu/its/content_creation">riohondo.edu/its/content_creation</a></p>
-</div>
-<div id="resources" class="slide section level1">
-<h1>Resources</h1>
+</section>
+<section id="resources" class="level2">
+<h2>Resources</h2>
 <ul>
 <li><a href="assets/handouts.pdf">Workshop Handouts (pdf download)</a></li>
 <li><a href="http://www.usability.gov/methods/design_site/writing4web.html">Usability.gov</a></li>
@@ -204,7 +229,40 @@ Sable Cantus &amp; Zulma Calderon
 <li><a href="http://office.microsoft.com/en-us/word-help/test-your-document-s-readability-HP010148506.aspx#BM1">Test Your Documents Readability in Word</a></li>
 <li><a href="http://theoatmeal.com/comics/apostrophe">The Oatmeal: When to Use an Apostrophe</a></li>
 </ul>
-<p><meta name="duration" content="45" /></p>
+</section>
 </div>
+ 
+<script src="lib/js/head.min.js"></script>
+<script src="js/reveal.min.js"></script>
+ 
+<script>
+// Full list of configuration options available here:
+// https://github.com/hakimel/reveal.js#configuration
+Reveal.initialize({
+controls: true,
+progress: true,
+history: true,
+center: false,
+ 
+// available themes are in /css/theme
+theme: Reveal.getQueryHash().theme || 'beige',
+ 
+// default/cube/page/concave/zoom/linear/fade/none
+transition: Reveal.getQueryHash().transition || 'linear',
+ 
+// Optional libraries used to extend on reveal.js
+dependencies: [
+{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+{ src: 'plugin/markdown/showdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+// { src: 'plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
+]
+});
+ 
+</script>
+ 
 </body>
 </html>
