updated author and link info

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  
 <meta name="description" content="Content Creation">
  
-<meta name="author" content="Sable Cantus &amp; Zulma Calderon" />
+<meta name="author" content="Sable Cantus" />
  
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -43,7 +43,7 @@ document.write( '<link rel="stylesheet" href="css/print/' +
  
 <section>
 <h1>Content Creation</h1>
-<h3>Sable Cantus &amp; Zulma Calderon</h3>
+<h3>Sable Cantus</h3>
 <p>
 <h4>2013 Rio Hondo Website Refresh</h4>
 </p>
@@ -222,7 +222,7 @@ Training
 <section id="resources" class="level2">
 <h2>Resources</h2>
 <ul>
-<li><a href="assets/handouts.pdf">Workshop Handouts (pdf download)</a></li>
+<li><a href="assets/handouts.pdf">Workshop Handouts (pdf download by Zulma Calderon)</a></li>
 <li><a href="http://www.usability.gov/methods/design_site/writing4web.html">Usability.gov</a></li>
 <li><a href="http://www.4syllables.com.au/resources/web-writing-tips/readable-writing/">Writing in a Readable Style</a></li>
 <li><a href="http://blogcritics.org/how-to-write-great-website-content/">How to Write Great Website Content</a></li>
